syntax = "proto3";

package model;

service ModelService {
  rpc LoadModel(LoadModelRequest) returns (LoadModelResponse) {}
  rpc GetPosition(GetPositionRequest) returns (GetPositionResponse) {}
  rpc GetNormal(GetNormalRequest) returns (GetNormalResponse) {}
  rpc GetFace(GetFaceRequest) returns (GetFaceResponse) {}
  rpc GetFileList(GetFileListRequest) returns (GetFileListResponse) {}
  rpc TranslateModel(TranslateModelRequest) returns (TranslateModelResponse) {}
  rpc RotateModel(RotateModelRequest) returns (RotateModelResponse) {}
}

message LoadModelRequest {
    string file_name = 1;
}

message LoadModelResponse {
    
}

message GetPositionRequest {
  
}

message GetPositionResponse {
  repeated double position = 1;
}

message GetNormalRequest {
  
}

message GetNormalResponse {
  repeated double normal = 1;
}

message GetFaceRequest {
  
}

message GetFaceResponse {
  repeated int32 num = 1;
}

message GetFileListRequest {
  
}

message GetFileListResponse {
  repeated string file_list = 1;
}

message TranslateModelRequest {
  double x_offset = 1;
  double y_offset = 2;
  double z_offset = 3;
}

message TranslateModelResponse {

}

message RotateModelRequest {
  double vx = 1;
  double vy = 2;
  double vz = 3;
  double angle = 4;
}

message RotateModelResponse {

}